create daily catalog page layout issue fixed

--- a/app/src/main/res/layout/activity_daily_teaching.xml
+++ b/app/src/main/res/layout/activity_daily_teaching.xml
@@ -5,191 +5,205 @@
     android:layout_height="match_parent"
     android:elevation="7dp">
 
-<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-            <include
-                android:id="@+id/tool_bar"
-                layout="@layout/tool_bar">
-            </include>
+        <include
+            android:id="@+id/tool_bar"
+            layout="@layout/tool_bar"
+            android:layout_width="match_parent">
+        </include>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Create Daily Catalog"
+            android:textSize="18sp"
+            android:textColor="@color/colorWhite"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?android:attr/colorAccent"
+            android:textAllCaps="true"
+            android:fontFamily="sans-serif" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Create Daily Catalog"
-                android:textSize="20sp"
-                android:textColor="@color/colorWhite"
-                android:layout_gravity="center"
-                android:gravity="center"
+                android:text="Select Date"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:id="@+id/select_date"
+                android:elevation="1dp"
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:background="?android:attr/colorAccent" />
+                android:textColor="@color/textcolor"
+                android:textStyle="normal|bold"
+                android:textSize="18sp"
+                android:fontFamily="serif" />
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp">
-
-                <TextView
-                    android:text="Select Date"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:id="@+id/select_date"
-                    android:layout_weight="1"
-                    android:elevation="1dp"
-                    android:paddingTop="10dp"
-                    android:textColor="@color/textcolor"
-                    android:textStyle="normal|bold"
-                    android:textSize="18sp"
-                    android:fontFamily="serif" />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="none"
-                    android:ems="10"
-                    android:id="@+id/edit_date_picker"
-                    android:layout_weight="1"
-                    android:onClick="setDate"
-                    android:text="Todays Date"
-                    android:cursorVisible="false"
-                    android:focusableInTouchMode="false"
-                    android:keepScreenOn="false"
-                    android:labelFor="@+id/select_date"
-                    android:singleLine="true"
-                    android:textAlignment="textStart"
-                    android:fontFamily="sans-serif"
-                    android:textAllCaps="true" />
-
-            </LinearLayout>
-
-
-            <!--<CalendarView-->
-                <!--android:id="@+id/calendarView"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="300dp"-->
-                <!--android:layout_marginBottom="16dp"-->
-                <!--android:layout_marginTop="16dp" />-->
-
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/divider"
-                android:layout_marginTop="10dp">
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:spinnerMode="dialog"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:prompt="@string/chapter"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/RecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="left"
-                    android:scrollbars="vertical"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:scrollbarThumbVertical="@color/colorWhite"
-                    android:scrollbarThumbHorizontal="@color/colorWhite">
-
-                </android.support.v7.widget.RecyclerView>
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="30dp"-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:text="Chapters :"-->
-                    <!--android:textColor="@color/textcolor"-->
-                    <!--android:textSize="20sp"-->
-                    <!--android:layout_marginBottom="5dp"/>-->
-
-                <!--<Spinner-->
-                    <!--android:id="@+id/spinner"-->
-                    <!--android:layout_marginTop="30dp"-->
-                    <!--android:layout_marginBottom="5dp"-->
-                    <!--android:prompt="@string/chapter"-->
-                    <!--android:spinnerMode="dialog"-->
-                    <!--android:background="#50337ab7"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"/>-->
-            </LinearLayout>
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:id="@+id/pointslinear"
+            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:inputType="none"
+                android:ems="10"
+                android:id="@+id/edit_date_picker"
+                android:onClick="setDate"
+                android:text="Todays Date"
+                android:cursorVisible="false"
+                android:focusableInTouchMode="false"
+                android:keepScreenOn="false"
+                android:labelFor="@+id/select_date"
+                android:singleLine="true"
+                android:textAlignment="center"
+                android:fontFamily="sans-serif"
+                android:textAllCaps="true"
+                android:background="@color/colorWhite" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="20dp"
-                    android:text="Points"
-                    android:paddingRight="10dp"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/textcolor"
-                    android:layout_marginRight="10dp"
-                    android:fontFamily="serif" />
+        </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/divider"
+            android:layout_marginTop="10dp">
+            <Spinner
+                android:id="@+id/spinner"
+                android:spinnerMode="dialog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:prompt="@string/chapter"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/points_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
+                android:scrollbars="vertical"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:scrollbarThumbVertical="@color/colorWhite"
+                android:scrollbarThumbHorizontal="@color/colorWhite">
+
+            </android.support.v7.widget.RecyclerView>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="30dp"-->
+                <!--android:layout_marginLeft="5dp"-->
+                <!--android:text="Chapters :"-->
+                <!--android:textColor="@color/textcolor"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"/>-->
+
+            <!--<Spinner-->
+                <!--android:id="@+id/spinner"-->
+                <!--android:layout_marginTop="30dp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:prompt="@string/chapter"-->
+                <!--android:spinnerMode="dialog"-->
+                <!--android:background="#50337ab7"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"/>-->
+        </LinearLayout>
+
+        <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
+        android:layout_height="match_parent"
+            android:paddingTop="10dp">
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+               <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:orientation="vertical"
+                    android:id="@+id/pointslinear"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical" >
+                    android:layout_marginTop="5dp">
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/my_recycler_view"
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:scrollbars="vertical"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
                         android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="5dp" />
+                        android:text="Points"
+                        android:paddingRight="10dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:textColor="@color/textcolor"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="serif" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical" >
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/my_recycler_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:scrollbars="vertical"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginTop="5dp" >
+
+                        </android.support.v7.widget.RecyclerView>
+                    </LinearLayout>
+
                 </LinearLayout>
-
-            </LinearLayout>
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="horizontal"
-                android:weightSum="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:id="@+id/buttonCreate"
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:orientation="horizontal"
+                    android:weightSum="1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorWhite"
-                    android:layout_marginTop="20dp"
-                    android:clickable="true"
-                    android:layout_marginLeft="20dp"
-                    android:text="Create"
-                    android:layout_weight="0.32"
-                    android:layout_marginRight="20dp"
-                    android:background="@color/colorAccent"
-                    android:textStyle="normal|bold"
-                    android:textAllCaps="false"
-                    android:layout_marginBottom="20dp" />
+                    android:layout_height="wrap_content">
 
+
+                    <Button
+                        android:id="@+id/buttonCreate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorWhite"
+                        android:layout_marginTop="20dp"
+                        android:clickable="true"
+                        android:layout_marginLeft="20dp"
+                        android:text="Create"
+                        android:layout_weight="0.32"
+                        android:layout_marginRight="20dp"
+                        android:background="@color/colorAccent"
+                        android:textStyle="normal|bold"
+                        android:layout_marginBottom="20dp"
+                        android:textSize="14sp"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+        </android.support.v4.widget.NestedScrollView>
+
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/RecyclerView"
+        android:layout_width="320dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:background="#ffffff"
+        android:scrollbars="vertical">
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.v4.widget.DrawerLayout>
