--- a/app/src/main/res/layout-v21/activity_daily_teaching.xml
+++ b/app/src/main/res/layout-v21/activity_daily_teaching.xml
@@ -50,7 +50,7 @@
                 android:fontFamily="serif" />
 
             <EditText
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="date"
                 android:ems="10"
@@ -129,12 +129,12 @@
                 android:layout_height="match_parent">
 
 
-                <LinearLayout
+               <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:orientation="vertical"
-                     android:id="@+id/pointslinear"
-                     android:layout_width="match_parent"
-                     android:layout_height="match_parent"
-                     android:layout_marginTop="5dp">
+                    android:id="@+id/pointslinear"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -152,24 +152,23 @@
                         tools:ignore="RtlHardcoded,RtlSymmetry" />
 
                     <LinearLayout
-                         android:layout_width="match_parent"
-                         android:layout_height="match_parent"
-                         android:orientation="vertical" >
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical" >
 
-                         <android.support.v7.widget.RecyclerView
-                             android:id="@+id/my_recycler_view"
-                             android:layout_width="match_parent"
-                             android:layout_height="wrap_content"
-                             android:scrollbars="vertical"
-                             android:layout_marginLeft="20dp"
-                             android:layout_marginRight="20dp"
-                             android:layout_marginTop="5dp" >
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/my_recycler_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:scrollbars="vertical"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginTop="5dp" >
 
-                         </android.support.v7.widget.RecyclerView>
-                     </LinearLayout>
+                        </android.support.v7.widget.RecyclerView>
+                    </LinearLayout>
 
-                 </LinearLayout>
-
+                </LinearLayout>
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:orientation="horizontal"
                     android:weightSum="1"
