--- a/app/src/main/res/layout/eracord_header.xml
+++ b/app/src/main/res/layout/eracord_header.xml
@@ -7,40 +7,50 @@
     android:weightSum="1">
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="65dp"
         android:orientation="vertical"
+        android:background="@color/colorAccent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/colorAccent">
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/org_name"
+            android:inputType="textCapWords"
+            android:layout_marginLeft="12dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorWhite"
+            android:textStyle="normal|bold" />
 
         <TextView
             android:id="@+id/email"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorWhite"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="12dp"
             android:layout_marginTop="5dp"
             android:text="abc@gmail.com"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:textSize="14sp"
 
-            android:textAllCaps="true"
-            android:textAlignment="textStart" />
+            android:textAllCaps="false"
+            android:textAlignment="textStart"
+            android:textStyle="normal|bold" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@android:drawable/sym_def_app_icon"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="12dp"
         android:id="@+id/circleView"
-        android:layout_marginBottom="20dp"
-        android:layout_above="@+id/linearLayout"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="21dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
