--- a/app/src/main/res/layout/eracord_items.xml
+++ b/app/src/main/res/layout/eracord_items.xml
@@ -4,7 +4,7 @@
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:layout_height="wrap_content"
-    android:background="#ffffff"
+    android:background="@color/colorWhite"
     android:orientation="vertical">
 
 
@@ -22,6 +22,11 @@
         android:paddingTop="4dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
-        android:id="@+id/rowText" />
+        android:id="@+id/rowText"
+        android:textAllCaps="false"
+        android:background="@color/colorWhite"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/textcolor"
+        android:textSize="14sp" />
 
 </LinearLayout>
