--- a/app/src/main/res/layout/eracord_header.xml
+++ b/app/src/main/res/layout/eracord_header.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="178dp"
-    android:background="@color/colorAccent"
+    android:background="@drawable/back_pattern"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:orientation="vertical"
-        android:background="@color/colorAccent"
+        android:background="@drawable/back_pattern"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
