--- a/app/src/main/res/layout/eracord_header.xml
+++ b/app/src/main/res/layout/eracord_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="178dp"
     android:background="@drawable/back_pattern"
@@ -9,12 +10,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="65dp"
         android:orientation="vertical"
         android:background="@drawable/back_pattern"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_height="wrap_content">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleView"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@android:drawable/sym_def_app_icon"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/colorWhite"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="40dp" />
 
         <TextView
             android:text="TextView"
@@ -25,7 +36,12 @@
             android:layout_marginLeft="12dp"
             android:textSize="16sp"
             android:textColor="@color/colorWhite"
-            android:textStyle="normal|bold" />
+            android:textStyle="normal|bold"
+            android:layout_marginTop="15dp"
+            android:textColorHighlight="@null"
+            android:textColorHint="@null"
+            android:textColorLink="@null"
+            android:textCursorDrawable="@null" />
 
         <TextView
             android:id="@+id/email"
@@ -42,7 +58,7 @@
             android:textStyle="normal|bold" />
     </LinearLayout>
 
-    <ImageView
+    <!--<ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@android:drawable/sym_def_app_icon"
@@ -52,5 +68,5 @@
         android:layout_marginTop="21dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true" />-->
 </RelativeLayout>
