add layout for daily teaches page

--- a/app/src/main/res/layout/eracord_header.xml
+++ b/app/src/main/res/layout/eracord_header.xml
@@ -41,7 +41,8 @@
             android:textColorHighlight="@null"
             android:textColorHint="@null"
             android:textColorLink="@null"
-            android:textCursorDrawable="@null" />
+            android:textCursorDrawable="@null"
+            android:autoText="true" />
 
         <TextView
             android:id="@+id/email"
