--- a/app/src/main/res/layout-v21/daily_fill_catalog.xml
+++ b/app/src/main/res/layout-v21/daily_fill_catalog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -75,7 +76,8 @@
             android:gravity="center"
             android:text="Load More"
             android:visibility="gone"
-            android:textColor="@color/textcolor" />
+            android:textColor="@color/textcolor"
+            tools:ignore="HardcodedText" />
 
     </LinearLayout>
 
@@ -85,7 +87,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:background="#ffffff"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        tools:ignore="RtlHardcoded">
 
     </android.support.v7.widget.RecyclerView>
 </android.support.v4.widget.DrawerLayout>
