--- a/app/src/main/res/layout/daily_fill_items.xml
+++ b/app/src/main/res/layout/daily_fill_items.xml
@@ -9,7 +9,8 @@
 <LinearLayout android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/divider">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -21,53 +22,50 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/standard"
-            android:layout_width="0dp"
-            android:textSize="15dp"
-            android:textColor="@color/textcolor"
-            android:layout_weight="1"
+            android:id="@+id/chapter"
+            android:layout_width="100dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="14sp"
+            android:layout_weight="0.41"
             android:layout_height="wrap_content"
-            android:text="Street"
-            android:layout_gravity="left" />
+            android:text="@string/chapter_text"
+            android:layout_gravity="right"
+            android:textAlignment="viewStart"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal|bold"
+            android:paddingTop="4dp" />
 
         <TextView
-            android:id="@+id/chapter"
-            android:layout_width="0dp"
-            android:textColor="@color/textcolor"
-            android:textSize="15dp"
-            android:layout_weight="1"
+            android:id="@+id/date"
+            android:layout_width="50dp"
+            android:textColor="@color/common_google_signin_btn_text_light_default"
+            android:textSize="13dp"
             android:layout_height="wrap_content"
-            android:text="456546546"
-            android:layout_gravity="right" />
+            android:text="@string/date"
+            android:layout_gravity="left"
+            android:layout_weight="0.10"
+            android:textAlignment="textEnd"
+            android:paddingTop="4dp" />
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
-        android:paddingBottom="5dp"
         android:paddingRight="10dp"
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/date"
-            android:layout_width="0dp"
-            android:textColor="@color/textcolor"
-            android:textSize="15dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Street"
-            android:layout_gravity="left" />
-
-        <TextView
             android:id="@+id/points"
             android:layout_width="0dp"
-            android:textColor="@color/textcolor"
-            android:textSize="15dp"
+            android:textColor="@color/common_google_signin_btn_text_light_default"
+            android:textSize="13dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="456546546"
-            android:layout_gravity="right" />
+            android:text="@string/points"
+            android:layout_gravity="right"
+            android:fontFamily="serif"
+            android:paddingTop="2dp" />
 
         <TextView
             android:id="@+id/dailyid"
@@ -77,18 +75,31 @@
             android:visibility="gone"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="456546546"
+            android:text="@string/dailyid"
             android:layout_gravity="right" />
 
 
 
     </LinearLayout>
 
-    <View
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="#000000"/>
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp">
+
+        <TextView
+            android:id="@+id/standard"
+            android:layout_width="match_parent"
+            android:textSize="13dp"
+            android:textColor="@color/common_google_signin_btn_text_light_default"
+            android:layout_height="wrap_content"
+            android:text="@string/standard"
+            android:layout_gravity="left"
+            android:fontFamily="serif" />
     </LinearLayout>
+
+</LinearLayout>
 <!--</android.support.v7.widget.CardView>-->
