--- a/app/src/main/res/layout/activity_class.xml
+++ b/app/src/main/res/layout/activity_class.xml
@@ -68,7 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="#ffffff"
+        android:background="@color/colorWhite"
         android:scrollbars="vertical"
         tools:ignore="RtlHardcoded">
 
