--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -85,7 +85,7 @@
         android:layout_width="320dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="#ffffff"
+        android:background="@color/colorWhite"
         android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
