--- a/app/src/main/res/layout/activity_daily_teaching.xml
+++ b/app/src/main/res/layout/activity_daily_teaching.xml
@@ -39,7 +39,7 @@
 
             <TextView
                 android:text="@string/select_date"
-                android:layout_width="150dp"
+                android:layout_width="172dp"
                 android:layout_height="40dp"
                 android:id="@+id/select_date"
                 android:elevation="1dp"
@@ -80,7 +80,7 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:spinnerMode="dialog"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:prompt="@string/chapter"
                 android:paddingBottom="10dp"
