--- a/app/src/main/res/layout/daily_fill_items.xml
+++ b/app/src/main/res/layout/daily_fill_items.xml
@@ -19,53 +19,55 @@
         android:paddingTop="5dp"
         android:layout_height="wrap_content"
         android:paddingRight="10dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/chapter"
-            android:layout_width="150dp"
+            android:layout_width="206dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="@string/chapter_text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_gravity="right"
-            android:paddingTop="4dp"
-            android:textSize="14sp"
+            android:paddingTop="2dp"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif"
             android:textColor="@color/colorAccent"
-            android:textStyle="normal|bold"
-            android:layout_weight="0.01" />
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:layout_weight="0.58" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="50dp"
             android:textColor="@color/bb_inActiveBottomBarItemColor"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="13dp"
+            android:textSize="14sp"
             android:layout_height="wrap_content"
             android:text="@string/date"
-            android:layout_gravity="left"
-            android:layout_weight="0.01"
+            android:layout_gravity="center_horizontal"
             android:textAlignment="textEnd"
-            android:paddingTop="8dp" />
+            android:paddingTop="6dp"
+            android:layout_weight="0.33" />
 
     </LinearLayout>
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:orientation="horizontal" >
-
         <TextView
             android:id="@+id/points"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:textColor="@color/bb_inActiveBottomBarItemColor"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="13dp"
-            android:layout_weight="1"
+            android:textSize="14dp"
             android:layout_height="wrap_content"
             android:text="@string/points"
             android:layout_gravity="right"
-            android:fontFamily="sans-serif" />
+            android:fontFamily="sans-serif"
+            android:textAlignment="viewStart" />
 
         <TextView
             android:id="@+id/dailyid"
@@ -93,7 +95,7 @@
         <TextView
             android:id="@+id/standard"
             android:layout_width="match_parent"
-            android:textSize="13dp"
+            android:textSize="14sp"
             android:textColor="@color/bb_inActiveBottomBarItemColor"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_height="wrap_content"
