layout issue fixed

--- a/app/src/main/res/layout/presenty_catalog.xml
+++ b/app/src/main/res/layout/presenty_catalog.xml
@@ -3,130 +3,161 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:elevation="7dp">
-<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 
-    <include
-        android:id="@+id/tool_bar"
-        layout="@layout/tool_bar"></include>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Presentee Catalog"
-        android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:textColor="@android:color/black"
-        android:layout_gravity="center"
-        android:gravity="center"/>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:text="Present"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="15sp"/>
-    <TextView
-        android:id="@+id/totalpresent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:text="0"
-        android:layout_marginBottom="10dp"
-        android:textStyle="bold"
-        android:layout_marginLeft="20dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="15sp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="165dp"
-        android:textColor="@android:color/black"
-        android:text="Absent"
-        android:layout_marginBottom="10dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="15sp"/>
-
-    <TextView
-        android:id="@+id/totalabsent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:textColor="@android:color/black"
-        android:text="0"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="15sp"/>
-</LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:scrollbars="vertical"
-        />
-    <TextView
-        android:id="@+id/nodata"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:text="No Student Available"
-        android:layout_marginTop="80dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:visibility="gone"
-        android:textSize="15sp"/>
+        android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        >
-    <Button
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:text="UPDATE"
-        android:visibility="gone"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="30dp"
-        android:id="@+id/savepresenty"
-        android:textColor="@color/textcolor"
-        android:background="@drawable/button_shape"
-       />
-    <Button
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:text="CANCEL"
-        android:layout_marginBottom="5dp"
-        android:visibility="gone"
-        android:layout_marginLeft="30dp"
-        android:id="@+id/button"
-        android:textColor="@color/textcolor"
-        android:background="@drawable/button_shape"
-      />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/divider">
+
+            <include
+                android:id="@+id/tool_bar"
+                layout="@layout/tool_bar"
+                android:layout_width="match_parent"></include>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Presentee Catalog"
+                android:textSize="18sp"
+                android:textColor="@color/colorWhite"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@color/colorAccent"
+                android:textAllCaps="true"
+                android:fontFamily="sans-serif" />
+
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+                android:layout_gravity="center_horizontal|start"
+                android:layout_margin="10dp"
+                android:weightSum="1">
+
+                <TextView
+                android:layout_width="109dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorWhite"
+                android:text="Present"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:background="@color/colorAccent"
+                android:textStyle="normal|bold"
+                android:textAllCaps="true"
+                android:textAlignment="center"
+                    android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/totalpresent"
+                    android:layout_width="52dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/holo_green_dark"
+                    android:text="0"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                    android:textAlignment="center"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="109dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:text="Absent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                    android:textAlignment="center"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:textAllCaps="true"
+                    android:background="@color/colorAccent"
+                    android:layout_weight="1"
+                    android:textStyle="normal|bold" />
+
+                <TextView
+                android:id="@+id/totalabsent"
+                android:layout_width="52dp"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_light"
+                android:text="0"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:layout_weight="1"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
         </LinearLayout>
-</LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/nodata"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:text="No Student Available"
+                    android:layout_marginTop="80dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:textSize="18sp"
+                    android:textStyle="normal|bold"
+                    android:textAlignment="center" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/my_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="0.99"
+                    android:paddingTop="10dp" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="UPDATE"
+                    android:visibility="gone"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/savepresenty"
+                    android:textColor="@color/colorWhite"
+                    android:background="@color/colorAccent"
+                    android:textStyle="normal|bold"
+                    android:textAlignment="center"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp" />
+            </LinearLayout>
+        </ScrollView>
+
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/RecyclerView"
         android:layout_width="320dp"
