--- a/app/src/main/res/layout/activity_daily_teaching.xml
+++ b/app/src/main/res/layout/activity_daily_teaching.xml
@@ -84,7 +84,8 @@
                 android:layout_height="wrap_content"
                 android:prompt="@string/chapter"
                 android:paddingBottom="10dp"
-                android:paddingTop="10dp" />
+                android:paddingTop="10dp"
+                android:gravity="center_vertical" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/points_recycler_view"
@@ -154,16 +155,18 @@
                     <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
-                         android:orientation="vertical" >
+                         android:orientation="vertical"
+                        android:weightSum="1">
 
                          <android.support.v7.widget.RecyclerView
                              android:id="@+id/my_recycler_view"
                              android:layout_width="match_parent"
-                             android:layout_height="wrap_content"
+                             android:layout_height="306dp"
                              android:scrollbars="vertical"
                              android:layout_marginLeft="20dp"
                              android:layout_marginRight="20dp"
-                             android:layout_marginTop="5dp" >
+                             android:layout_marginTop="5dp"
+                             android:layout_weight="3.70">
 
                          </android.support.v7.widget.RecyclerView>
                      </LinearLayout>
@@ -190,9 +193,9 @@
                         android:layout_marginRight="20dp"
                         android:background="@color/colorAccent"
                         android:textStyle="normal|bold"
-                        android:layout_marginBottom="20dp"
                         android:textSize="14sp"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginBottom="10dp" />
 
                 </LinearLayout>
             </LinearLayout>
