--- a/app/src/main/res/layout/presenty_catalog_row.xml
+++ b/app/src/main/res/layout/presenty_catalog_row.xml
@@ -9,25 +9,31 @@
 
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="10dp">
 
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:text="name"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="name"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/chkSelected"
+        android:layout_toLeftOf="@+id/chkSelected"
+        android:fontFamily="serif" />
 
-        <CheckBox
+    <CheckBox
             android:id="@+id/chkSelected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             />
-    </RelativeLayout>
+
+</RelativeLayout>
 
 <!--</android.support.v7.widget.CardView>-->
