--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -33,51 +33,61 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" >
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="1"
+                android:layout_weight="1">
 
-                <TextView
-                    android:id="@+id/nodata"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="@string/no_data"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    android:visibility="gone"
-                    android:textStyle="normal|bold"
-                    android:textAllCaps="true"
-                    android:textAlignment="center" />
+                    android:layout_height="match_parent">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/my_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="510dp">
+                    <TextView
+                        android:id="@+id/nodata"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="@string/no_data"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp"
+                        android:visibility="gone"
+                        android:textStyle="normal|bold"
+                        android:textAllCaps="true"
+                        android:textAlignment="center" />
 
-                </android.support.v7.widget.RecyclerView>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/my_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="510dp">
+
+                    </android.support.v7.widget.RecyclerView>
+
+                    <Button
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/loadmore"
+                        android:background="@drawable/round_button"
+                        android:layout_marginRight="20dp"
+                        android:textStyle="normal|bold"
+                        android:textColor="@color/colorWhite"
+                        android:drawableTop="@drawable/down_arrow"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:minHeight="43dp"
+                        android:elevation="1dp"
+                        android:layout_centerHorizontal="true"
+                        android:paddingTop="6dp"
+                        android:layout_marginBottom="20dp" />
+
+                </RelativeLayout>
 
             </LinearLayout>
         </ScrollView>
-
-        <Button
-            android:id="@+id/loadmore"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="left|center"
-            android:text="@string/load_more"
-            android:textColor="@color/colorWhite"
-            android:textSize="18sp"
-            android:visibility="visible"
-            android:textStyle="normal|bold"
-            android:textAlignment="center"
-            android:background="@color/colorAccent"
-            android:textAllCaps="false"
-            android:layout_weight="1" />-->
-
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
